# imdb-movie-review

./: .gitignore  Dockerfile  Makefile  README.md  deployment.yaml  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yaml
flask_app/: app.py  requirements.txt
notebooks/: exp1.ipynb  exp2.py  exp3.py
scripts/: promote_model.py
src/connections/: s3_connection.py
src/data/: data_ingestion.py
src/features/: features_engineering.py
src/model/: model_evaluation.py  model_register.py
tests/: test_model.py
